[package]
name = "slide-puzzle-generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
image = "0.23.14"
rand = "0.8.4"
reqwest = { version = "0.11.4", features = ["blocking"] }
thiserror = "1.0.26"
